# RS1-Search-and-Rescue-Robot

./: .gitignore  README.md
41068_ignition_bringup/: CMakeLists.txt  README.md
41068_ignition_bringup/config/: 41068.rviz  nav2_params.yaml  slam_params.yaml
41068_ignition_bringup/config/husky/: nav2_params.yaml  robot_localization.yaml
41068_ignition_bringup/launch/: 41068_ignition.launch.py  41068_navigation.launch.py
41068_ignition_bringup/models/Animal_Models/bear/: model.config  model.sdf
41068_ignition_bringup/models/Animal_Models/bear/meshes/bearv1/: bearv1.mtl
41068_ignition_bringup/models/Animal_Models/duck/: model.config  model.sdf
41068_ignition_bringup/models/Animal_Models/duck/meshes/duckv1/: duckv1.mtl
41068_ignition_bringup/models/Animal_Models/frog/: model.config  model.sdf
41068_ignition_bringup/models/Animal_Models/frog/meshes/Frog/: Frogv1.mtl
41068_ignition_bringup/models/Animal_Models/monkey/: model.config  model.sdf
41068_ignition_bringup/models/Animal_Models/monkey/meshes/no_evil_monkey/: monkeyv1.mtl
41068_ignition_bringup/worlds/: large_demo.sdf
nav2_bt/: CMakeLists.txt  nav2_bt_plugin.xml  package.xml
nav2_bt/bt_xml/: random_walk.xml
nav2_bt/config/: nav2_bt.yaml
nav2_bt/include/nav2_bt/: random_goal.hpp
nav2_bt/src/: random_goal.cpp
nav2_goal_sender/: package.xml  setup.cfg  setup.py
nav2_goal_sender/nav2_goal_sender/: nav2_goal_sender.py
yolo_detector/README.txt/: README.txt
yolo_detector/yolo_detector/: yolo_detector_node.py
